<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">CodeOps Studio</string>
    <string name="app_name_short" translatable="false">CodeOps</string>
    <string name="app_slogan">Code anywhere anytime</string>
    <string name="theme_auto">Auto</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="close_app">Close app</string>
    <string name="app_crashed">%s crashed.</string>
    <string name="dialog_config_theme_title">Choose theme</string>
    <string name="dialog_code_editor_tab_size">Tab size</string>
    <string name="sharelayout_actiontext">@string/share</string>
    <string name="sharelayout_prompttext">Generating link please wait</string>
    <string name="sharelayout_summarytext">Share this link with anyone passionate about coding, and let them experience seamless coding on the go.</string>
    <string name="sharelayout_titletext">Share this application</string>
    <string name="waiting">Waiting</string>
    <string name="retry">Retry</string>
    <string name="released_on">Released on</string>
    <string name="version">Version</string>
    <string name="visit_website">Visit Website</string>
    <string name="social_media_handles">Socials</string>
    <string name="open_source_licences">Open Source Licences</string>
    <string name="check_update">Check update</string>
    <string name="documentation">Documentation</string>
    <string name="successfully_imported">Successfully imported</string>
    <string name="pkg_name">Package Name</string>
    <string name="task">Task</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="app_version">App version</string>
    <string name="app_version_code">Version code</string>
    <string name="app_version_name">Version name</string>
    <string name="installed_by">Installed by</string>
    <string name="system">System</string>
    <string name="installed">Installed</string>
    <string name="marketplace">Marketplace</string>
    <string name="execute">Execute</string>
    <string name="undo">Undo</string>
    <string name="search_plugin">Search Plugin</string>
    <string name="relative_close_first">First</string>
    <string name="relative_close_all">All</string>
    <string name="untitled">Untitled</string>
    <string name="share">Share</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="sdk_version">SDK version</string>
    <string name="about">About</string>
    <string name="about_template">About template</string>
    <string name="settings">Settings</string>
    <string name="redo">Redo</string>
    <string name="failed">Failed</string>
    <string name="next">Next</string>
    <string name="speed">Speed</string>
    <string name="welcome">Welcome</string>
    <string name="empty_editor">Empty Editor</string>
    <string name="explorer">explorer</string>
    <string name="build_output">Build Output</string>
    <string name="ide_logs">IDE Logs</string>
    <string name="terminal">Terminal</string>
    <string name="offline">Offline</string>
    <string name="locale">Locale</string>
    <string name="format">Format</string>
    <string name="search">Search</string>
    <string name="exit">Exit</string>
    <string name="privacy">Privacy</string>
    <string name="device_model">Device Model</string>
    <string name="android_version">Android Version</string>
    <string name="build_id">Build ID</string>
    <string name="release">Release</string>
    <string name="board">Board</string>
    <string name="stacktrace">Stacktrace</string>
    <string name="brand">Brand</string>
    <string name="country">Country</string>
    <string name="cpu_arch">CPU Arch</string>
    <string name="run">Run</string>
    <string name="find">Find</string>
    <string name="save">Save</string>
    <string name="rename">Rename</string>
    <string name="cancel">Cancel</string>
    <string name="open_anyway">Open Anyway</string>
    <string name="create">Create</string>
    <string name="decline">Decline</string>
    <string name="allow">Allow</string>
    <string name="close">Close</string>
    <string name="refresh">Refresh</string>
    <string name="folder">Folder</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="done">Done</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="processed">Processed</string>
    <string name="unzip_canceled">Unzip canceled</string>
    <string name="unzip_dialog_fragment_title">Unzipping Files</string>
    <string name="extracting">Extracting</string>
    <string name="reset">Reset</string>
    <string name="file">File</string>
    <string name="files">Files</string>
    <string name="into">Into</string>
    <string name="clone">Clone</string>
    <string name="cloning_repo">Cloning repository</string>
    <string name="cloning_into">Cloning into</string>
    <string name="open_folder">Open folder</string>
    <string name="copy_path">Copy path</string>
    <string name="copy_url">Copy url</string>
    <string name="delete">Delete</string>
    <string name="previous">Previous</string>
    <string name="create_project">Create Project</string>
    <string name="create_folder">Create Folder</string>
    <string name="create_file">Create File</string>
    <string name="project_name">Project Name</string>
    <string name="processing">Processing</string>
    <string name="open_terminal">Open in integrated terminal</string>
    <string name="new_folder">New folder</string>
    <string name="templates">Templates</string>
    <string name="source_control">Source control</string>
    <string name="ended">Ended</string>
    <string name="complete">Complete</string>
    <string name="completed_in">Completed in</string>
    <string name="seconds">Seconds</string>
    <string name="plugin">Plugin</string>
    <string name="loading_template">Loading Template</string>
    <string name="invalid_dir">Invalid directory</string>
    <string name="confirm_delete">Confirm delete</string>
    <string name="new_file">New file</string>
    <string name="destination_path">Destination: %s</string>
    <string name="diagnostics">Diagnostics</string>
    <string name="repository_url">Repository URL</string>
    <string name="build_actions">build actions</string>
    <string name="open_file_tree">Swipe right for %s.</string>
    <string name="open_build_actions">Swipe up for %s.</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="choose_template">Choose template</string>
    <string name="no_folder_opened">No folder opened</string>
    <string name="copy_relative_file_path">Copy relative file path</string>
    <string name="copy_file_path">Copy file path</string>
    <string name="no_folder_opened_prompt"> You have not yet opened a folder.</string>
    <string name="no_folder_opened_aux_prompt">You can also create a new project from the in-built templates.</string>
    <string name="build_actions_prompt">Swipe up for build output, terminal and more.</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="cannot_open_invalid_document">Cannot open invalid document</string>
    <string name="menu_copy_line">Copy line</string>
    <string name="menu_cut_line">Cut line</string>
    <string name="menu_delete_line">Delete line</string>
    <string name="menu_replace_line">Replace line</string>
    <string name="menu_duplicate_line">Duplicate line</string>
    <string name="menu_convert_to_lowercase">Convert to lowercase</string>
    <string name="menu_convert_to_uppercase">Convert to uppercase</string>
    <string name="menu_find_in_file">Find in file editor</string>
    <string name="menu_read_only_mode">Read-only mode</string>
    <string name="menu_jump_to_line">Jump to line</string>
    <string name="menu_zoom">Zoom</string>
    <string name="menu_refresh_preview">Refresh preview</string>
    <string name="menu_open_in_browser">Open in browser</string>
    <string name="menu_console">Console</string>
    <string name="menu_desktop_mode">Desktop mode</string>
    <string name="menu_preferences">@string/settings</string>
    <string name="menu_reset_color_schemes">Reset color schemes</string>
    <string name="menu_next_cursor_position">Next position</string>
    <string name="menu_previous_cursor_position">Previous position</string>
    <string name="menu_increase_indent">Increase indent</string>
    <string name="menu_decrease_indent">Decrease indent</string>
    <string name="menu_soft_wrap">Soft wrap</string>
    <string name="menu_lite_mode">Lite mode</string>
    <string name="menu_syntax_highlight">Syntax</string>
    <string name="storage_permission_continue">Continue</string>
    <string name="storage_permission_cancel">@string/cancel</string>
    <string name="storage_permission_denied">Storage permission denied!</string>
    <string name="storage_permission_request_again">@string/request_again</string>
    <string name="storage_permission_denial_prompt">This application needs storage permission to save files and projects that wouldn\'t be deleted when you uninstall %s.</string>
    <string name="delete_file_title">@string/delete</string>
    <string name="delete_file_message">Do you want to delete\n `%s?`</string>
    <string name="delete_folder_message">Do you want to delete\n `%s` and it\'s contents?</string>
    <string name="close_project">Close Project</string>
    <string name="close_project_title">@string/close_project</string>
    <string name="close_project_message">Do you want this project? All opened editors will be closed while closing this project.</string>
    <string name="alrt_unsupported_txt_encoding">The file is not displayed in the text editor because it is either binary, or uses an unsupported text encoding</string>
    <string name="alrt_text_parsing_error">An error occurred when reading file</string>
    <string name="alrt_check_is_binary_file">An error occurred while checking if file contains binary data</string>
    <string name="alrt_cannot_go_back">Can\'t go back</string>
    <string name="alrt_cannot_go_forward">Can\'t go forward</string>
    <string name="alrt_rom_cannot_edit_editor">The current editor cannot be edited...Turn of Read-only mode if it\'s enabled</string>
    <string name="prompt_new_name">New name</string>
    <string name="prompt_file_name">File name</string>
    <string name="prompt_folder_name">Folder name</string>
    <string name="request_again">Request again</string>
    <string name="pane_close">Close this</string>
    <string name="pane_close_others">Close others</string>
    <string name="pane_close_all">Close all</string>
    <string name="pane_close_right">Close to the right</string>
    <string name="pane_close_left">Close to the left</string>
    <string name="pane_pin">Pin</string>
    <string name="webview_pane_title">Live-Preview</string>
    <string name="edit">Edit</string>
    <string name="alert_icon_desc">Alert icon</string>
    <string name="ad_privacy_settings">Ad privacy settings</string>
    <string name="fragment_treeview_folder_options_content_desc">Folder options</string>
    <string name="three_ellipsis">…</string>
    <string name="items_computing">Items: computing…</string>
    <string name="items_left_computing">Items Left: computing…</string>
    <string name="speed_computing">Speed: computing…</string>
    <string name="tree_view_desc">Tree view</string>
    <string name="reload_file">Reload File</string>
    <string name="save_as">Save As</string>
    <string name="file_statistics">File Statistics</string>
    <string name="reload_with_charset">Reload with Charset</string>
</resources>