<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ This file is part of CodeOps Studio.
  ~ CodeOps Studio - Code anywhere anytime
  ~ https://github.com/euptron/CodeOps-Studio
  ~ Copyright (C) 2024-2025 Etido Peter
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program. If not, see https://www.gnu.org/licenses/
  ~
  ~ If you have more questions, feel free to message Etido Peter if you have any
  ~ questions or need additional information. Email: etido.up@gmail.com
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_close"
        android:orderInCategory="100"
        android:title="@string/pane_close" />

    <item
        android:id="@+id/menu_close_others"
        android:orderInCategory="200"
        android:title="@string/pane_close_others" />

    <item
        android:id="@+id/menu_close_all"
        android:orderInCategory="300"
        android:title="@string/pane_close_all" />

    <item
        android:id="@+id/menu_close_right"
        android:orderInCategory="400"
        android:title="@string/pane_close_right" />

    <item
        android:id="@+id/menu_close_left"
        android:orderInCategory="500"
        android:title="@string/pane_close_left" />

    <item
        android:id="@+id/menu_pin"
        android:orderInCategory="600"
        android:title="@string/pane_pin" />
</menu>