<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ This file is part of CodeOps Studio.
  ~ CodeOps Studio - Code anywhere anytime
  ~ https://github.com/euptron/CodeOps-Studio
  ~ Copyright (C) 2024-2026 Etido Peter
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program. If not, see https://www.gnu.org/licenses/
  ~
  ~ If you have more questions, feel free to message Etido Peter if you have any
  ~ questions or need additional information. Email: euptron@gmail.com
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/tree_info_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:gravity="center_vertical|start"
        android:orientation="horizontal"
        android:padding="4dp"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:id="@+id/folder_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen24dp"
            android:layout_weight="1"
            android:ellipsize="marquee"
            android:padding="2dp"
            android:singleLine="true"
            android:text="@string/no_folder_opened"
            android:textAllCaps="true"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/folder_options"
            android:layout_width="@dimen/dimen24dp"
            android:layout_height="@dimen/dimen24dp"
            android:layout_marginEnd="2dp"
            android:background="@drawable/ripple_item_rounded"
            android:contentDescription="@string/fragment_treeview_folder_options_content_desc"
            android:src="@drawable/ic_dots_horizontal"
            android:visibility="invisible" />
    </LinearLayout>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/filetree_progress_indicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:indicatorDirectionLinear="startToEnd"
        app:trackThickness="4dp" />

    <LinearLayout
        android:id="@+id/no_folder_lin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="1dp"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:text="@string/no_folder_opened_prompt"
            android:textAppearance="?attr/textAppearanceBodySmall" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/tree_open_folder"
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen8dp"
            android:layout_marginEnd="@dimen/dimen8dp"
            android:text="@string/open_folder" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:text="@string/no_folder_opened_aux_prompt"
            android:textAppearance="?attr/textAppearanceBodySmall" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/choose_template"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen8dp"
            android:layout_marginEnd="@dimen/dimen8dp"
            android:text="@string/choose_template" />
    </LinearLayout>

    <HorizontalScrollView
        android:id="@+id/file_tree_area"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/tree_view_desc"
        android:fillViewport="true"
        android:visibility="visible" />

</LinearLayout>
