<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ This file is part of CodeOps Studio.
  ~ CodeOps Studio - Code anywhere anytime
  ~ https://github.com/euptron/CodeOps-Studio
  ~ Copyright (C) 2024-2025 Etido Peter
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program. If not, see https://www.gnu.org/licenses/
  ~
  ~ If you have more questions, feel free to message Etido Peter if you have any
  ~ questions or need additional information. Email: euptron@gmail.com
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:theme="@style/AppTheme">

    <ImageView
        android:id="@+id/alert_icon"
        android:layout_width="@dimen/dimen74dp"
        android:layout_height="@dimen/dimen74dp"
        android:contentDescription="@string/alert_icon_desc"
        android:scaleType="fitXY"
        android:src="@drawable/ic_alert" />

    <TextView
        android:id="@+id/alert_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen8dp"
        android:gravity="center"
        android:padding="@dimen/dimen8dp"
        tools:text="@string/alrt_unsupported_txt_encoding" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/action_button"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen48dp"
        android:layout_marginTop="@dimen/dimen4dp"
        android:layout_marginEnd="@dimen/dimen48dp"
        android:gravity="center"
        tools:text="@string/open_anyway" />

</LinearLayout>
